[package]
name = "ppcp"
version = "0.1.0"
authors = ["Nikita Bilous <nikita@bilous.me>"]
license = "MIT"
description = "Tool for copying files in console with neat progress bars"
repository = "https://github.com/acidnik/ppcp"
readme = "README.md"
edition = "2021"

[dependencies]
clap = {version="4.5",features=["cargo"]}
walkdir = "2.5.0"
indicatif = "0.17.9"
pathdiff = "0.2.3"
thiserror = "2"
anyhow = "1.0.94"
